--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -55,8 +56,32 @@
     }
     .animate-notification { animation: slideDown 0.6s cubic-bezier(0.22, 1, 0.36, 1) forwards; }
     
-    .plane-wrapper { width: 64px; height: 64px; display: flex; align-items: center; justify-content: center; pointer-events: none; }
-    .plane-rotation-layer { display: flex; align-items: center; justify-content: center; width: 64px; height: 64px; }
+    .plane-wrapper { 
+      width: 64px; 
+      height: 64px; 
+      display: flex; 
+      align-items: center; 
+      justify-content: center; 
+      pointer-events: none;
+      position: relative;
+    }
+    .plane-rotation-layer { 
+      display: flex; 
+      align-items: center; 
+      justify-content: center; 
+      width: 100%; 
+      height: 100%; 
+      transform-origin: center center;
+    }
+    .plane-rotation-layer i {
+      display: block;
+      line-height: 1;
+    }
+
+    .custom-plane-container {
+      background: transparent !important;
+      border: none !important;
+    }
 
     ::-webkit-scrollbar { width: 0px; }
     
